--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
   <h1>Welcome to PG Panel</h1>
   <p>Please login to access logs and bans.</p>
-  <script src="app.js"></script>
+ <script type="module" src="app.js"></script>
 </body>
 </html>
