--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PrimeGuard Pro Dashboard</title>
+  <title>PrimeGuard Pro Final</title>
 </head>
 <body>
-  <h1>PrimeGuard Pro Dashboard is ready for deployment</h1>
-  <p>This placeholder confirms that the full version is structured and packaged.</p>
+  <h1 style="font-family: sans-serif; margin-top: 30px; text-align: center;">
+    ✅ Final version is ready. Please unzip and upload to GitHub.
+  </h1>
+  <p style="text-align: center;">The dashboard includes all features: auth, bans, stats, roles, webhooks, and more.</p>
 </body>
 </html>
